- added x64 to vs2008 project ( buildAllExamples_v9 ) [paths: obj64, win64-visualstudio]
- burningvideo: getMaxTextureSize adjusted [ changed meaning of SOFTWARE_DRIVER_2_TEXTURE_MAXSIZE
- burningvideo: mipmaplevel adjusted ( not that bad bokeh...(sometimes) )

--------------------------
Changes in 1.8.4
 - Add -U__STRICT_ANSI__ option to c::b project files to allow compiling with -std=c++11 and add an error when trying to compile with Irrlicht with __STRICT_ANSI__
 - Update libpng to 1.6.21
 - Update zlib to 1.2.8
 - Fix some compile warnings in aes which got handled as errors by some c++11 compilers.
 - Get rid of some misleading-indentation warnings in gcc6
 - Fix serialization of the InputReceiverEnabled flag in CCameraSceneNode
 - Fix pasting text from X11 applications to Irrlicht. Thanks @est31 for the patch.
 - Tests give now a warning when stabilizing screenshots failed. Aslo trying more often now (a hack as taking screenshots otherwise fails often in windowed mode on some systems).

--------------------------
Changes in 1.8.3 (13.9.2015)
 - Fix the fix for compiling on GCC5 (thanks to est31 for report and patch)

--------------------------
Changes in 1.8.2 (30.8.2015)

 - Add VS2013 project files
 - Fix compiling with IRR_LINUX_XCURSOR_
 - Fix compiling with NO_IRR_COMPILE_WITH_LIBJPEG_  (thx to anontypist for report and patch).
 - Fix compiling on GCC5 on MinGW (thanks to Slipxy for finding the bug and to osense for reporting it).
 - Fix loading of .X and .B3D models with non-normalized quaternion rotations (thanks to JLouisB for a test-model).
 - Fix compiling on Free BSD (thanks to leper for reporting and patch)
 - Fix bug with multiple SetPixelFormat calls. (reported and fixed by anontypist)
 - Fix bug related to memory release in PNG image loader. Thanks elephoenix for it.
 - Fix crash in CGUIListBox when users pressed end key folled by any other key in an empty, focused list box (thanks at porcus for report and patch).